# foliot

./: Cargo.toml  LICENSE  README.md  flake.nix
.github/workflows/: flake.yml
src/: main.rs
