[package]
name = "pendulum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.23", features = ["serde"] }
clap = { version = "4.1.8", features = ["derive"] }
serde = { version = "1.0.151", features = ["derive"] }
serde_yaml = { version = "0.9.16" }
xdg = "2.4.1"
