[package]
name = "foliot"
version = "0.2.1"
edition = "2021"
authors = [ "jzbor" ]
readme = "README.md"
description = "A simple time tracking tool to keep track of your working or studying time."
repository = "https://github.com/jzbor/foliot"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.23", features = ["serde"] }
clap = { version = "4.1.8", features = ["derive"] }
serde = { version = "1.0.151", features = ["derive"] }
serde_yaml = { version = "0.9.16" }
tabled = { version = "0.10.0", features = ["color"] }
xdg = "2.4.1"
